# Limni

./: .gitignore  .prettierignore  .prettierrc  BUILD_SCRIPTS.md  LICENSE  LICENSE-RU  Makefile  QUICK-TEST-REFERENCE.md  README-PT-BR.md  README-RU.md  README.md  TESTING-GUIDE.md  build-all.bat  dev.bat  eslint.config.js  package.json  playwright.config.tauri.ts  playwright.config.ts  playwright.config.webdriver.ts  quick-build.bat  tsconfig.json  vitest.config.ts  vitest.config.ts.timestamp-1753258663179-57129ed78461d.mjs
src/: app.html  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: limni.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  utils.rs  webview.rs
src-tauri/src/commands/: tests.rs
src/lib/: test-setup.ts
src/lib/components/: AddressBar.svelte  BookmarksPanel.svelte  Button.test.ts  DownloadsPanel.svelte  ErrorPage.svelte  ExtensionsPanel.svelte  HistoryPanel.svelte  SettingsPanel.svelte  TabBar.svelte  Toolbar.svelte  WebViewManager.svelte  WindowControls.svelte
src/lib/components/__tests__/: AddressBar4pxGrid.test.ts  AddressBarLogic.test.ts  AddressBarResize.test.ts  HotkeysLogic.test.ts  TabBar.test.ts
src/lib/stores/: browser.svelte.ts
src/lib/types/: browser.ts  tauri.d.ts
src/lib/utils/: hotkeys.ts
src/routes/: +page.svelte
tests/e2e/: app.spec.ts
tests/e2e-tauri/: app.spec.ts
tests/e2e-webdriver/: app.spec.ts
tests/setup/: tauri-setup.ts  tauri-teardown.ts  webdriver-setup.ts  webdriver-teardown.ts
tests/types/: tauri-test.d.ts
